--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,7 @@ git:
 
 language: java
 
-# TODO(regisd) Remove the build matrix ; it really makes the deploy phase more complex
-jdk:
-- openjdk7
-- oraclejdk8
-- openjdk9
+jdk: openjdk9
 
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
@@ -28,16 +24,37 @@ jobs:
   include:
     - stage: Check Java format
       script: echo "TODO"
-      if: $TRAVIS_JDK_VERSION = openjdk9
+      jdk: openjdk9
     - stage: Compile and test
-      script: ./scripts/test-unit.sh
-      script: ./scripts/test-regression.sh
-    - stage: Deploy site and aggregated sources
+      script:
+        - ./scripts/test-unit.sh
+        - ./scripts/test-regression.sh
+      jdk:
+      - openjdk7
+      - oraclejdk8
+      - openjdk9
+    - stage: Deploy site
+      jdk: openjdk9
+      if: branch = travis
       script: ./scripts/mvn-site.sh
+      deploy: gh-pages
+        provider: pages
+        skip_cleanup: true
+        local_dir: target/maven-staging-site/maven-site
+        # GITHUB_TOKEN set in travis-ci.org dashboard
+        github_token: $GITHUB_TOKEN
+        repo: jflex-de/jflex-web
+        name: Travis site-deploy bot
+        keep-history: true
+    - stage: Commit aggregated source
+      jdk: openjdk9
+      if: branch = travis
       script: ./scripts/mvn-aggregate-srcs.sh
-      if:
-      - branch = master
-      - $TRAVIS_JDK_VERSION = openjdk9
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script: ./scripts/deploy-source-code.sh
+    - stage: cache
 
 # Travis sometimes fails to download deps from repo1.maven.org
 # A cache avoids downloading too much, and will also speed up the build.
@@ -48,28 +65,3 @@ cache:
   directories:
   - $HOME/.m2
   - jflex/lib
-
-deploy:
-# Deploy the maven site on Github pages
-- provider: pages
-  skip_cleanup: true
-  on:
-    branch: release
-    condition:
-    - $TRAVIS_JDK_VERSION = openjdk9
-  local_dir: target/maven-staging-site/maven-site
-  # GITHUB_TOKEN set in travis-ci.org dashboard
-  github_token: $GITHUB_TOKEN
-  repo: jflex-de/jflex-web
-  name: Travis site-deploy bot
-  keep-history: true
-# Aggregate sources and push to branch aggregated-java-sources
-- provider: script
-  skip_cleanup: true
-  on:
-    branch:
-    - master
-    - travis
-    condition:
-    - $TRAVIS_JDK_VERSION = openjdk9
-  script: ./scripts/deploy-source-code.sh
