Use ${project.version} rather than $VERSION in maven-plugin.md
This file is also used in the maven site, and the maven-site-plugin substitutes ${project.version}

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -37,6 +37,7 @@ manual.pdf: xmanual.pdf
 # variable substitutions:
 %.mdx: md/%.md Makefile
 	perl -p -e 's/\$$VERSION/$(VERSION)/g' < $< | \
+	perl -p -e 's/\$$\{project.version\}/$(VERSION)/g' < $< | \
 	perl -p -e 's/\$$RELEASE_DATE/$(RELEASE_DATE)/g' | \
 	perl -p -e 's/\$$UNICODE_VER/$(UNICODE_VER)/g' > $@
 
