--- a/jflex/examples/cup-interpreter/build.xml
+++ b/jflex/examples/cup-interpreter/build.xml
@@ -1,7 +1,7 @@
 <project name="interpreter" default="run">
 
-  <taskdef classname="jflex.anttask.JFlexTask" name="jflex" />
-  <taskdef classname="java_cup.anttask.CUPTask" name="cup" />
+  <taskdef classname="jflex.anttask.JFlexTask" name="jflex" classpath="../../target/jflex-full-1.7.1-SNAPSHOT.jar"/>
+  <taskdef classname="java_cup.anttask.CUPTask" name="cup" classpath="../../../cup/cup/java-cup-11b.jar"/>
 
   <target name="build" depends="realclean,compile" />
 
@@ -18,7 +18,7 @@
   </target>
 
   <target name="cup">
-    <cup srcfile="parser.cup" interface="yes" destdir="."/>
+    <cup srcfile="parser.cup" interface="yes" destdir="build"/>
   </target>
 
   <target name="genclean">
