--- a/jflex/examples/cup-interpreter/pom.xml
+++ b/jflex/examples/cup-interpreter/pom.xml
@@ -2,16 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.flex.examples</groupId>
-  <artifactId>cup-maven</artifactId>
+  <artifactId>cup-interpreter</artifactId>
   <version>1.0</version>
-  <name>A scanner for calculator.</name>
-  <description>It is the example from the JLex website with some small
-		modifications, to make it a bit more readable.
-
-    It comes from a short article series in the Linux Gazette
-    by Richard A. Sevenich and Christopher Lopes,
-    titled Compiler Construction Tools.</description>
+  <name>A parser for the AS language</name>
+  <description>An interpreter for a small functional
+    programming language (called "AS").
+    It uses JFlex and CUP.</description>
   <dependencies>
+    <dependency>
+      <groupId>de.jflex</groupId>
+      <artifactId>cup_runtime</artifactId>
+      <version>11b</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -23,11 +25,6 @@
       <artifactId>truth</artifactId>
       <version>0.36</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>de.jflex</groupId>
-      <artifactId>cup_runtime</artifactId>
-      <version>11b</version>
     </dependency>
   </dependencies>
   <build>
@@ -65,6 +62,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
+              <symbolInterface>true</symbolInterface>
             </configuration>
           </execution>
         </executions>
@@ -85,6 +83,11 @@
             </goals>
             <configuration>
               <finalName>${project.artifactId}-full-${project.version}</finalName>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>Main</mainClass>
+                </transformer>
+              </transformers>
               <artifactSet>
                 <includes>
                   <include>de.jflex:cup_runtime</include>
