--- a/jflex/examples/cup-interpreter/build.xml
+++ b/jflex/examples/cup-interpreter/build.xml
@@ -1,38 +1,38 @@
 <project name="interpreter" default="run">
 
-  <taskdef classname="jflex.anttask.JFlexTask" name="jflex" classpath="../../target/jflex-full-1.7.1-SNAPSHOT.jar"/>
-  <taskdef classname="java_cup.anttask.CUPTask" name="cup" classpath="../../../cup/cup/java-cup-11b.jar"/>
+  <property name="java_cup" value="../../../cup/cup/java-cup-11b.jar"/>
+  <property name="jflex" value="../../target/jflex-full-1.7.1-SNAPSHOT.jar"/>
 
-  <target name="build" depends="realclean,compile" />
+  <taskdef classname="jflex.anttask.JFlexTask" name="jflex" classpath="${jflex}"/>
+  <taskdef classname="java_cup.anttask.CUPTask" name="cup" classpath="${java_cup}"/>
+
+  <target name="build" depends="clean,compile" />
 
   <target name="run" depends="compile">
-    <java classname="Main"> <arg line="example.as"/> </java>
+    <java classname="Main">
+      <classpath>
+        <pathelement location="${java_cup}"/>
+        <pathelement path="build"/>
+      </classpath>
+      <arg line="src/test/data/example.as"/> </java>
   </target>
 
   <target name="compile" depends="jflex,cup">
-    <javac srcdir="." destdir="." />
+    <javac destdir="build" classpath="${java_cup}">
+      <src path="src/main/java/" />
+      <src path="build/"/>
+    </javac>
   </target>
 
   <target name="jflex">
-    <jflex file="scanner.flex" encoding="utf-8"/>
+    <jflex file="src/main/jflex/scanner.flex" destdir="build" encoding="utf-8"/>
   </target>
 
   <target name="cup">
-    <cup srcfile="parser.cup" interface="yes" destdir="build"/>
-  </target>
-
-  <target name="genclean">
-    <delete file="Yylex.java"/>
-    <delete file="sym.java" />
-    <delete file="parser.java" />
+    <cup srcfile="src/main/cup/parser.cup" interface="yes" destdir="build"/>
   </target>
 
   <target name="clean">
-    <delete>
-      <fileset dir="." includes="**/*~"/>
-      <fileset dir="." includes="**/*.class"/>
-    </delete>
+    <delete dir="build"/>
   </target>
-
-  <target name="realclean" depends="clean,genclean" />
 </project>
