Mavenify zero-reader

--- a/jflex/examples/pom.xml
+++ b/jflex/examples/pom.xml
@@ -16,5 +16,6 @@
     <module>cup-lcalc</module>
     <module>simple-maven</module>
     <module>standalone-maven</module>
+    <module>zero-reader</module>
   </modules>
 </project>
