--- a/jflex/examples/cup-interpreter/build.xml
+++ b/jflex/examples/cup-interpreter/build.xml
@@ -1,4 +1,4 @@
-<project name="interpreter" default="compile">
+<project name="AS language interpreter" default="compile">
 
   <property name="java_cup" value="../../../cup/cup/java-cup-11b.jar"/>
   <property name="jflex" value="../../target/jflex-full-1.7.1-SNAPSHOT.jar"/>
@@ -15,6 +15,10 @@
         <pathelement path="build"/>
       </classpath>
       <arg line="src/test/data/example.as"/> </java>
+  </target>
+
+  <target name="test" depends="run">
+    <!-- TODO(regisd) compare output with golden. -->
   </target>
 
   <target name="compile" depends="jflex,cup">
