--- a/jflex/examples/cup-java/build.xml
+++ b/jflex/examples/cup-java/build.xml
@@ -15,7 +15,7 @@
   </target>
 
   <target name="test" depends="run">
-    <!-- TODO(regisd) compare output with golden. -->
+    <!-- TODO(#384) compare output with golden. -->
   </target>
 
   <target name="compile" depends="cup,scanner,unicode">
