--- a/jflex/examples/simple/build.xml
+++ b/jflex/examples/simple/build.xml
@@ -13,7 +13,7 @@
   </target>
 
   <target name="test" depends="run">
-    <!-- TODO(regisd) compare output with golden. -->
+    <!-- TODO(#384) compare output with golden. -->
   </target>
 
   <target name="compile" depends="scanner">
