--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ jdk:
 
 env:
   matrix:
+  - TEST_SUITE=java-format
   - TEST_SUITE=ant
   - TEST_SUITE=unit
   - TEST_SUITE=regression
@@ -32,8 +33,8 @@ install: ./mvnw -version
 script: ./scripts/run-tests.sh
 
 after_success:
-- ./scripts/mvn-site.sh
-- ./scripts/mvn-aggregate-srcs.sh
+- test $TEST_SUITE = "unit" && ./scripts/mvn-site.sh)
+- test $TEST_SUITE = "unit" && ./scripts/mvn-aggregate-srcs.sh
 
 # Travis sometimes fails to download deps from repo1.maven.org
 # A cache avoids downloading too much, and will also speed up the build.
@@ -44,6 +45,7 @@ cache:
   directories:
   - $HOME/.m2
   - jflex/lib
+  - tools
 
 deploy:
 # Deploy the maven site on Github pages
