--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -154,6 +154,12 @@
                   <include>de.jflex:cup_runtime</include>
                 </includes>
               </artifactSet>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>jflex.Main</mainClass>
+                </transformer>
+
+              </transformers>
             </configuration>
           </execution>
         </executions>
