--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -69,6 +69,14 @@
     </dependency>
   </dependencies>
   <build>
+    <resources>
+      <resource>
+        <directory>..</directory>
+        <includes>
+          <include>LICENSE.md</include>
+        </includes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -158,7 +166,6 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>jflex.Main</mainClass>
                 </transformer>
-
               </transformers>
             </configuration>
           </execution>
