Generate outputdir in makefile

--- a/jflex/examples/cup-interpreter/Makefile
+++ b/jflex/examples/cup-interpreter/Makefile
@@ -16,23 +16,25 @@ CUP        = java -jar $(CUPJAR)
 
 all: clean compile
 
-clean:
-	rm -rf out
-	mkdir -p out/genfiles
-
 compile: gen_cup gen_jflex src/main/java/*.java
 	javac -cp $(CUPJAR):out -d out src/main/java/*.java out/genfiles/*.java
 
 # writes parser.java	sym.java
-gen_jflex: src/main/jflex/scanner.flex
+gen_jflex: src/main/jflex/scanner.flex outdir
 	$(JFLEX) -d out/genfiles $<
 
-gen_cup: src/main/cup/parser.cup
+gen_cup: src/main/cup/parser.cup outdir
 	$(CUP) -interface < $<
 	mv parser.java sym.java out/genfiles
 
-output: compile src/test/data/example.as
+output: compile src/test/data/example.as outdir
 	java -cp $(CUPJAR):out Main < src/test/data/example.as > out/output.txt
 
 test: output
 	@(diff out/output.txt src/test/data/output.good && echo "Test OK!") || (echo "Test FAILED"; exit 1)
+
+clean:
+	rm -rf out
+
+outdir:
+	mkdir -p out/genfiles
