Improve build and test for examples (#385)
* Try to support all (maven, ant, make) build systems on every example.
* Change the directory layout of all examples to follow the Maven convention. 
* Be sure that all build artifacts don't happen in the root directory, and use the following directories:
  - `target` for maven
  - `build` for ant
  - `out` for make
* Use the same rule names for ant and makefile (maven already has its won convention)
  - *clean* removes the build directory
  - *compile* generates code and compiles java
  - *run* runs the lexer on the sample input
  - *test* verifies the actual output with the golden file
* Fix  #383 
  - `make test` to actually fail when the actual output differs from the 
  - Ensure that all integration tests in examples run by Travis
* N.B. ant build fails with
  > run:
  >     [java] java.lang.ClassCastException: java_cup.runtime.Symbol cannot be cast to java_cup.runtime.ComplexSymbolFactory$ComplexSymbol
  >     [java] 	at parser$CUP$parser$actions.CUP$parser$do_action_part00000000(Unknown Source)
  >     [java] 	at parser$CUP$parser$actions.CUP$parser$do_action(Unknown Source)
  >     [java] 	at parser.do_action(Unknown Source)
  >     [java] 	at java_cup.runtime.lr_parser.parse(lr_parser.java:699)
  >     [java] 	at Main.main(Unknown Source)
  See #384
* Add TODO for the test in ant
* Doc:
  - Add summary README description of every example
  - Add general README for the root examples directory

--- a/jflex/examples/byaccj/Makefile
+++ b/jflex/examples/byaccj/Makefile
@@ -1,27 +1,23 @@
-# only works with the Java extension of yacc: 
-# byacc/j from http://troi.lincom-asg.com/~rjamison/byacc/
+# Be sure to use yacc/j ; not unix yacc nor bison.
+BYACCJ = yaccj -J
+ROOT       = ../../..
+JFLEX      = $(ROOT)/jflex/bin/jflex
 
-JFLEX  = ../../bin/jflex 
-BYACCJ = yacc -J
-JAVAC  = javac
+run: all
+	java -cp out Parser
 
-# targets:
+all: build
 
-all: Parser.class
-
-run: Parser.class
-	java Parser
-
-build: clean Parser.class
+build: Parser.class
 
 clean:
-	rm -f *~ *.class *.java
+	rm -rf out
 
 Parser.class: Yylex.java Parser.java
-	$(JAVAC) Parser.java
+	javac -d out out/*.java
 
-Yylex.java: calc.flex
-	$(JFLEX) calc.flex
+Yylex.java: src/main/jflex/calc.flex
+	$(JFLEX) -d out $<
 
-Parser.java: calc.y
-	$(BYACCJ) calc.y
+Parser.java: src/main/yacc/calc.y
+	$(BYACCJ) $< ;  mv Parser.java ParserVal.java out
