--- a/jflex/examples/pom.xml
+++ b/jflex/examples/pom.xml
@@ -11,8 +11,11 @@
   </description>
   <packaging>pom</packaging>
   <modules>
-    <module>cup-maven</module>
-    <module>simple-maven</module>
-    <module>standalone-maven</module>
+    <module>cup-interpreter</module>
+    <module>cup-java</module>
+    <module>cup-lcalc</module>
+    <module>simple</module>
+    <module>standalone</module>
+    <module>zero-reader</module>
   </modules>
 </project>
