Add TEST_SUITE=bazel to run Bazel on examples
In an attempt to support all build systems in the examples,
run bazel test on all examples.

That's also the first step towards Bazel support #204

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,23 @@ env:
   - TEST_SUITE=ant
   - TEST_SUITE=unit
   - TEST_SUITE=regression
+  - TEST_SUITE=bazel
+
+# Prerequisites for Bazel
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - curl
+      - pkg-config
+      - zip
+      - g++
+      - zlib1g-dev
+      - unzip
+      - python
+
+sudo: $TEST_SUITE = bazel
 
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
