--- a/.travis.yml
+++ b/.travis.yml
@@ -11,18 +11,22 @@ git:
 
 language: java
 
-# TODO(regisd) Remove the build matrix ; it really makes the deploy phase more complex
-jdk:
-- oraclejdk8
-- openjdk9
+jdk: openjdk9
 
-env:
-  matrix:
-  - TEST_SUITE=java-format
-  - TEST_SUITE=ant
-  - TEST_SUITE=unit
-  - TEST_SUITE=regression
-
+matrix:
+  include:
+  - name: "Java format"
+    TEST_SUITE=java-format
+  - name: "Ant JDK8"
+    sdk: oraclejdk8
+    TEST_SUITE=ant
+  - name: "Ant JDK9"
+    TEST_SUITE=ant
+  - name: "Maven unit tests"
+    TEST_SUITE=unit
+  - name: "Regression tests"
+    TEST_SUITE=regression
+       
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
 # otherwise `mvn site` fails in the before_deploy phase.
