--- a/jflex/examples/cup-interpreter/build.xml
+++ b/jflex/examples/cup-interpreter/build.xml
@@ -6,13 +6,13 @@
   <taskdef classname="jflex.anttask.JFlexTask" name="jflex" classpath="${jflex}"/>
   <taskdef classname="java_cup.anttask.CUPTask" name="cup" classpath="${java_cup}"/>
 
-  <target name="formica" depends="clean,compile" />
+  <target name="build" depends="clean,compile" />
 
   <target name="run" depends="compile">
     <java classname="Main">
       <classpath>
         <pathelement location="${java_cup}"/>
-        <pathelement path="formica"/>
+        <pathelement path="antbuild"/>
       </classpath>
       <arg line="src/test/data/example.as"/> </java>
   </target>
@@ -22,21 +22,21 @@
   </target>
 
   <target name="compile" depends="jflex,cup">
-    <javac destdir="formica" classpath="${java_cup}">
+    <javac destdir="antbuild" classpath="${java_cup}">
       <src path="src/main/java/" />
-      <src path="build/"/>
+      <src path="antbuild/"/>
     </javac>
   </target>
 
   <target name="jflex">
-    <jflex file="src/main/jflex/scanner.flex" destdir="formica" encoding="utf-8"/>
+    <jflex file="src/main/jflex/scanner.flex" destdir="antbuild" encoding="utf-8"/>
   </target>
 
   <target name="cup">
-    <cup srcfile="src/main/cup/parser.cup" interface="yes" destdir="formica"/>
+    <cup srcfile="src/main/cup/parser.cup" interface="yes" destdir="antbuild"/>
   </target>
 
   <target name="clean">
-    <delete dir="formica"/>
+    <delete dir="antbuild"/>
   </target>
 </project>
