--- a/jflex/examples/cup-java/build.xml
+++ b/jflex/examples/cup-java/build.xml
@@ -6,10 +6,10 @@
   <taskdef classname="jflex.anttask.JFlexTask" name="jflex" classpath="${jflex}"/>
   <taskdef classname="java_cup.anttask.CUPTask" name="cup" classpath="${java_cup}"/>
 
-  <target name="formica" depends="clean,compile" />
+  <target name="build" depends="clean,compile" />
 
   <target name="run" depends="compile">
-    <java classname="JavaParser" classpath="build:${java_cup}">
+    <java classname="JavaParser" classpath="antbuild:${java_cup}">
       <arg line="src/main/java/TestLexer.java"/>
     </java>
   </target>
@@ -19,25 +19,25 @@
   </target>
 
   <target name="compile" depends="cup,scanner,unicode">
-    <javac destdir="formica" classpath="${java_cup}">
+    <javac destdir="antbuild" classpath="${java_cup}">
       <src path="src/main/java/" />
-      <src path="build/"/>
+      <src path="antbuild/"/>
     </javac>
   </target>
 
   <target name="cup">
-    <cup srcfile="src/main/cup/java12.cup" interface="yes" destdir="formica"/>
+    <cup srcfile="src/main/cup/java12.cup" interface="yes" destdir="antbuild"/>
   </target>
 
   <target name="scanner">
-    <jflex file="src/main/jflex/java.flex" destdir="formica"/>
+    <jflex file="src/main/jflex/java.flex" destdir="antbuild"/>
   </target>
 
   <target name="unicode">
-    <jflex file="src/main/jflex/unicode.flex" destdir="formica"/>
+    <jflex file="src/main/jflex/unicode.flex" destdir="antbuild"/>
   </target>
 
   <target name="clean">
-    <delete dir="formica"/>
+    <delete dir="antbuild"/>
   </target>
 </project>
