--- a/.travis.yml
+++ b/.travis.yml
@@ -11,21 +11,23 @@ git:
 
 language: java
 
-jdk: openjdk9
+jdk:
+- openjdk9
 
 matrix:
   include:
   - name: "Java format"
-    env: TEST_SUITE=java-format
+    script: scripts/test-java-format.sh
   - name: "Ant JDK8"
+    script: scripts/run-ant.sh
     sdk: oraclejdk8
-    env: TEST_SUITE=ant
   - name: "Ant JDK9"
-    env: TEST_SUITE=ant
+    script: scripts/run-ant.sh
   - name: "Maven unit tests"
+    script: scripts/test-unit.sh
     env: TEST_SUITE=unit
   - name: "Regression tests"
-    env: TEST_SUITE=regression
+    script: scripts/test-regression.sh
 
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
@@ -37,8 +39,8 @@ install: ./mvnw -version
 script: ./scripts/run-tests.sh
 
 after_success:
-- test $TEST_SUITE = "unit" && ./scripts/mvn-site.sh
-- test $TEST_SUITE = "unit" && ./scripts/mvn-aggregate-srcs.sh
+- test $TEST_SUITE="unit" && ./scripts/mvn-site.sh
+- test $TEST_SUITE="unit" && ./scripts/mvn-aggregate-srcs.sh
 
 # Travis sometimes fails to download deps from repo1.maven.org
 # A cache avoids downloading too much, and will also speed up the build.
@@ -59,7 +61,7 @@ deploy:
     branch: release
     condition:
     - $TEST_SUITE = unit
-    - $TRAVIS_JDK_VERSION = oraclejdk8
+    - $TRAVIS_JDK_VERSION = openjdk9
   local_dir: target/maven-staging-site/maven-site
   # GITHUB_TOKEN set in travis-ci.org dashboard
   github_token: $GITHUB_TOKEN
@@ -75,5 +77,5 @@ deploy:
     - travis
     condition:
     - $TEST_SUITE = unit
-    - $TRAVIS_JDK_VERSION = oraclejdk8
+    - $TRAVIS_JDK_VERSION = openjdk9
   script: ./scripts/deploy-source-code.sh
