--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,6 @@ matrix:
   - name: "Ant JDK9"
     script: scripts/run-ant.sh
   - name: "Bazel"
-    sudo: true
     script: scripts/bazel.sh
     # Prerequisites for Bazel
     addons:
@@ -47,6 +46,14 @@ matrix:
           - zlib1g-dev
           - unzip
           - python
+    before_install:
+    - mkdir -p tools
+    - curl -L https://github.com/bazelbuild/bazel/releases/download/0.16.1/bazel_0.16.1-linux-x86_64.deb -o tools/bazel-0.16.1.deb
+    install:
+    - java -version
+    - sudo apt-get install ./tools/bazel-0.16.1.deb
+    sudo: true
+    after_success: blaze shutdown
 
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
