Add Bazel job in Travis (#395)
* Add a new matrix cell for [Bazel](https://bazel.build)
* In the bazel job:
  - install deps with apt
  - download bazel.deb from official repo
  - install with `sudo apt-get install`. **N.B.** This job needs **sudo: true**
* Add a simple `bazel.sh` that only does (and it's not going to change much in the future)
  ```
  cd jflex/examples
  bazel build //...
  bazel test //...
  ```
* Add an (virtually) empty root `jflex/examples/BUILD`
  - This root BUILD defines one sh_test, so that `bazel test //...` doesn't complain with 
    > No test targets were found, yet testing was requested
* This is the first step for #204 (Bazel support)
* **N.B.** Do not use a cache for bazel.
  - I tried caching the bazel output directory (this is in theory perfectly fine)
    by setting  a non-default `--output_user_root=$TRAVIS_BUILD_DIR/__bazel__`
  - But the VM hangs at startup with
    > creating directory /home/travis/build/jflex-de/jflex/__bazel__

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,29 @@ matrix:
     sdk: oraclejdk8
   - name: "Ant JDK9"
     script: scripts/run-ant.sh
+  - name: "Bazel"
+    script: scripts/bazel.sh
+    # Prerequisites for Bazel
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - curl
+          - pkg-config
+          - zip
+          - g++
+          - zlib1g-dev
+          - unzip
+          - python
+    before_install:
+    - mkdir -p tools
+    - curl -L https://github.com/bazelbuild/bazel/releases/download/0.16.1/bazel_0.16.1-linux-x86_64.deb -o tools/bazel-0.16.1.deb
+    install:
+    - java -version
+    - sudo apt-get install ./tools/bazel-0.16.1.deb
+    sudo: true
+    after_success: blaze shutdown
 
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
